--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 attrs==23.2.0
 Automat==22.10.0
+beautifulsoup4==4.12.3
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
@@ -17,6 +18,7 @@ lxml==5.2.1
 packaging==24.0
 parsel==1.9.1
 Protego==0.3.1
+proxyscrape==0.3.0
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pycparser==2.22
@@ -26,11 +28,16 @@ queuelib==1.6.2
 requests==2.31.0
 requests-file==2.0.0
 Scrapy==2.11.1
+scrapy-proxy-pool==0.1.9
+scrapy-user-agents==0.1.1
 service-identity==24.1.0
 six==1.16.0
+soupsieve==2.5
 tldextract==5.1.2
 Twisted==24.3.0
 typing_extensions==4.11.0
+ua-parser==0.18.0
 urllib3==2.2.1
+user-agents==2.2.0
 w3lib==2.1.2
 zope.interface==6.3
