docs(settings): added keywords to worksetup settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,10 @@
 {
     "cSpell.words": [
+        "accesibility",
         "getall",
+        "iframe",
         "pinterest",
-        "tablist"
+        "tablist",
+        "tiktok"
     ]
 }
