--- a/requirements.txt
+++ b/requirements.txt
@@ -1,67 +1,47 @@
-asttokens==2.4.1
 attrs==23.2.0
 Automat==22.10.0
-beautifulsoup4==4.12.3
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
 constantly==23.10.4
-cryptography==42.0.5
+cryptography==42.0.7
 cssselect==1.2.0
-decorator==5.1.1
-executing==2.0.1
-filelock==3.13.4
+defusedxml==0.7.1
+filelock==3.14.0
 h11==0.14.0
 hyperlink==21.0.0
 idna==3.7
 incremental==22.10.0
-ipython==8.23.0
-itemadapter==0.8.0
+itemadapter==0.9.0
 itemloaders==1.2.0
-jedi==0.19.1
 jmespath==1.0.1
-lxml==5.2.1
-matplotlib-inline==0.1.7
+lxml==5.2.2
 outcome==1.3.0.post0
 packaging==24.0
 parsel==1.9.1
-parso==0.8.4
-pexpect==4.9.0
-prompt-toolkit==3.0.43
 Protego==0.3.1
-proxyscrape==0.3.0
-ptyprocess==0.7.0
-pure-eval==0.2.2
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pycparser==2.22
 PyDispatcher==2.0.7
-Pygments==2.17.2
 pyOpenSSL==24.1.0
 PySocks==1.7.1
-queuelib==1.6.2
-requests==2.31.0
-requests-file==2.0.0
-Scrapy==2.11.1
-scrapy-proxy-pool==0.1.9
-scrapy-user-agents==0.1.1
-selenium==4.20.0
+queuelib==1.7.0
+requests==2.32.2
+requests-file==2.1.0
+Scrapy==2.11.2
+selenium==4.21.0
 service-identity==24.1.0
+setuptools==70.0.0
 six==1.16.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
-soupsieve==2.5
-stack-data==0.6.3
 tldextract==5.1.2
-traitlets==5.14.3
-trio==0.25.0
+trio==0.25.1
 trio-websocket==0.11.1
 Twisted==24.3.0
-typing_extensions==4.11.0
-ua-parser==0.18.0
+typing_extensions==4.12.0
 urllib3==2.2.1
-user-agents==2.2.0
 w3lib==2.1.2
-wcwidth==0.2.13
 wsproto==1.2.0
-zope.interface==6.3
+zope.interface==6.4.post2
