feat(data): scrapped data

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,16 @@
 {
     "cSpell.words": [
         "accesibility",
+        "crossorigin",
         "getall",
+        "iasmtab",
         "iframe",
+        "leftsmtab",
         "pinterest",
+        "responsetypes",
         "tablist",
-        "tiktok"
+        "testid",
+        "tiktok",
+        "webelement"
     ]
 }
